refector code
