# src/app/modules/banner/banner.validation.ts
@@ -2,16 +2,18 @@ import { z } from 'zod';
 
 const createBannerZodSchema = z.object({
   body: z.object({
-    image_url: z
-      .string({ required_error: 'Image URL is required' })
-      .url('Invalid URL format'),
-    is_active: z.boolean(),
+    image_url: z.string({ required_error: 'Image is required' }),
+    is_active: z.boolean().optional(),
+    isDeleted: z.boolean().optional(),
   }),
 });
 
 const updateBannerZodSchema = z.object({
-  image_url: z.string().url('Invalid URL format').optional(),
-  is_active: z.boolean().optional(),
+  body: z.object({
+    image_url: z.string({ required_error: 'Image is required' }).optional(),
+    is_active: z.boolean().optional(),
+    isDeleted: z.boolean().optional(),
+  }),
 });
 
 export const BannerValidation = {
